k8s/rmmt-task.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmmt-task
  namespace: rmmt
  labels:
    app: rmmt-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmmt-task
  template:
    metadata:
      labels:
        app: rmmt-task
    spec:
      containers:
      - name: rmmt-task
        image: rmmt-api:latest
        imagePullPolicy: Never
        command: ["/bin/sh", "-c", "python tasks.py >> log/tasks.log"]
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        # 添加日志卷挂载
        volumeMounts:
        - name: log-volume
          mountPath: /app/log
      volumes:
      - name: log-volume
        emptyDir: {}
      restartPolicy: Always
